--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
         <label for="load">load</label>
         <input id="load" type="file">
         <button id="save">SAVE</button>
-        <button id="local" class="active">LOCAL</button>
+        <button id="local">LOCAL</button>
         <button id="run">RUN</button>
-        <button id="clsCode">Clear code</button>
+        <button id="clsCode">clear</button>
+        <button id="cmd">snip</button>
         <input id="file" type="text" value="FileName">
     </div>
     <textarea id="code"></textarea>
     <div id="monitor"></div>
+    <div id="keyboard" hidden></div>
     <script type="application/javascript" src="script.js"></script>
 </body>
 </html>
