add html snippeds

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style></style>
 </head>
 <body>
     <div id="tools">
-        <label for="load">load</label>
+        <label id="lab" for="load">load</label>
         <input id="load" type="file">
         <button id="save">SAVE</button>
         <button id="local">LOCAL</button>
@@ -21,5 +22,6 @@
     <div id="monitor"></div>
     <div id="keyboard" hidden></div>
     <script type="application/javascript" src="script.js"></script>
+    
 </body>
 </html>
