--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <button id="clsCode">clear</button>
         <button id="cmd">snip</button>
         <input id="file" type="text" value="FileName">
+        <button id="curLf">&#9668;=|==</button>
+        <button id="curRt">==|=&#9658;</button>
     </div>
     <textarea id="code"></textarea>
     <div id="monitor"></div>
