--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input id="file" type="text" value="FileName">
         <button id="curLf">&#9668;=|==</button>
         <button id="curRt">==|=&#9658;</button>
+        <button id="tab">TAB</button>
     </div>
     <textarea id="code"></textarea>
     <div id="monitor"></div>
