--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
         <button id="run">RUN</button>
         <button id="clsCode">clear</button>
         <button id="cmd">snip</button>
+        <button id="help">?</button>
         <input id="file" type="text" value="FileName">
         <button id="curLf">&#9668;=|==</button>
         <button id="curRt">==|=&#9658;</button>
         <button id="tab">TAB</button>
     </div>
     <textarea id="code"></textarea>
+    <div id="windows">
+        <button id="hidd-c">Код</button>
+        <button id="monitor-mini">Монитор</button>
+    </div> 
     <div id="monitor"></div>
     <div id="keyboard" hidden></div>
     <script type="application/javascript" src="script.js"></script>
